# software-butcher

./: .gitignore  Dockerfile  README.md  docker-compose.yml  hexstrike_mcp.py  hexstrike_server.py  pyproject.toml  requirements.txt  scope.json.example  setup.sh
examples/: scope_examples.py
scripts/: generate_architecture_diagram.py
software_butcher/: __init__.py  __main__.py  project.py
software_butcher/brain/: __init__.py  capability_resolver.py  confirmation.py  context.py  escalation.py  guards.py  hypotheses.py  llm_advisor.py  loop.py  policy.py  prompts.py
software_butcher/core/: __init__.py  adapter.py  app_root.py  app_wordlists.py  asset_classifier.py  asset_expander.py  assets.py  binary_acquisition.py  capability_priority.py  classifier.py  default_tools.py  domain_seed.py  domain_semantics.py  framework_config.py  health.py  llm.py  meta_utils.py  path_relevance.py  recon_seed.py  registry.py  router.py  runner.py  scope.py  source_acquisition.py  source_resolver.py  url_utils.py
software_butcher/setup/: __init__.py  bootstrap_frameworks.py
software_butcher/shelves/: __init__.py
software_butcher/state/: __init__.py  convergence.py  engagement.py  hypothesis_queue.py  path_graph.py  pcs.py  recon_checklist.py  schema.py  session_state.py  store.py  transport_state.py
software_butcher/synthesis/: __init__.py  lanes.py  report.py  verdict.py
software_butcher/tests/: test_app_link_expand.py  test_app_root.py  test_brain_asset_expansion.py  test_brain_loop.py  test_browser_nav.py  test_browser_redirect_hops.py  test_capability_priority.py  (+35 more)
(+30 files in other folders)
